Begin updating for 1.20.2+